<resources>
    <string name="app_name">Shirts</string>

    <!-- Errors -->
    <string name="error_network">Unable to connect to the server!</string>
    <string name="error_general">Something went wrong!</string>
    <string name="error_order">Unable to send your order, please try again!</string>
    <string name="error_order_empty">Your basket is empty!</string>
    <string name="error_availability">No more available item to add! ☹</string>

    <!-- Success -->
    <string name="success_order">Your order has been sent successfully.</string>
    
    <!-- Actions-->
    <string name="action_retry">Retry</string>
    <string name="action_submit">Submit your Order</string>
    <string name="action_add_to_cart">Add to Basket</string>
    
    <!-- Fields -->
    <string name="text_price">Price: %v € </string>
    <string name="text_colour">Colour:\n%v </string>
    <string name="text_size">Size:\n%v </string>
    <string name="text_basket">Your Basket</string>
    <string name="text_total">Total Cost: %v € </string>
    <string name="text_filter_size">SIZE\n%v</string>
    <string name="text_filter_colour">COLOUR\n%v</string>
    <string name="text_filter_none">None</string>
    <string name="text_filter_all">ALL</string>
    <string name="text_filter_size_title">Select your desired size</string>
    <string name="text_filter_colour_title">Select_your_desired_colour</string>
    <string name="text_no_item">No items has been found! ☹</string>
    <string name="try_again">Try Again!</string>

</resources>
