<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".ui.units.shirts.ShirtsFragment"
        android:background="@color/colorPrimaryDark">

    <LinearLayout
            android:id="@+id/fragment_shirts_empty_holder_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_actionbar"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/colorPrimary">

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="@dimen/size_text_large"
                    android:textStyle="italic|bold"
                    android:paddingStart="@dimen/padding_large"
                    android:paddingEnd="@dimen/padding_large"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_filter_bar"
                android:orientation="horizontal"
                android:background="@color/colorPrimary">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/fragment_shirts_size_filter_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAllCaps="true"
                    android:textColor="@color/title"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_filter_size"/>

            <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent"
                    android:layout_margin="@dimen/margin_shirts_filter_divider"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/fragment_shirts_colour_filter_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAllCaps="true"
                    android:textColor="@color/title"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_filter_colour"/>

        </LinearLayout>

        <ProgressBar
                android:id="@+id/fragment_shirts_progressbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_marginTop="@dimen/margin_top_shirts_recycler_view"
                style="?android:attr/progressBarStyleHorizontal"
                android:indeterminate="true"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_shirts_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_top_shirts_recycler_view"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>

</RelativeLayout>